# OpenSeaScripts

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
OpenSeaScripts/: AssetOptions.py  OSSBrowser.py  __init__.py
