[metadata]
name = OpenSeaScripts
version = 1.2.1
description = Scripts for automating OpenSea operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MRegirouard/OpenSeaScripts
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet :: WWW/HTTP :: Browsers	

[options]
packages = find:
include_package_data = True
install_requires = 
	selenium
	webdriver-manager